force-app/main/default/objects/Risk_Rating_Score_Location__c/Risk_Rating_Score_Location__c.object-meta.xml
<CustomObject>
    <label>Risk Rating Score - Location</label>
    <nameField>
        <displayFormat>Location Risk - {00000}</displayFormat>
        <label>Risk Rating Score - Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Rating Scores - Location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>