force-app/main/default/objects/Risk_Rating_Score_Location__c/fields/FATF_List__c.field-meta.xml
<CustomField>
    <fullName>FATF_List__c</fullName>
    <label>FATF List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black List</fullName>
            </value>
            <value>
                <fullName>Grey List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>