force-app/main/default/objects/Risk_Rating_Score_Location__c/fields/Is_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Is_Sanctioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sanctioned?</label>
    <type>Checkbox</type>
</CustomField>