force-app/main/default/objects/Risk_Rating_Score_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Region__c</columns>
    <columns>Score__c</columns>
    <columns>FATF_List__c</columns>
    <columns>Is_Sanctioned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>